# ClavisVault

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXECUTION-PLAN.md  Justfile  MASTER-CHECKLIST.md  README.md  RUN-THIS-PROMPT.md  TODO_AUTOPILOT.md  deny.toml  masterplan.md  rust-toolchain.toml  tarpaulin.toml
.AGENTS/: WORKLOG.md  todo.md
.AGENTS/plans/: complete-remaining-checklist-items.md  coverage-maximization-pass-v2.md  coverage-maximization-pass.md  dependency-upgrade-wave-pass.md  openclaw-comment-strip-performance-pass.md  regenerate-canonical-docs-set.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
AGENTS/: COVERAGE_100_TODO.md  WORKLOG.md
assets/: icon.icns
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  tarpaulin.toml
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: agents_guarded_section.rs  session_invariants.rs  vault_blob_parser.rs  vault_crypto_roundtrip.rs
crates/core/src/: agents_updater.rs  audit_log.rs  encryption.rs  export.rs  lib.rs  openclaw.rs  platform.rs  policy.rs  project_linker.rs  recovery.rs  rotation.rs  safe_file.rs  shell.rs  types.rs
crates/desktop/: Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo
crates/desktop/src/: App.tsx  main.rs  main.tsx  styles.css
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/src/: lib.rs  main.rs
crates/desktop/src/components/: AgentsTab.tsx  CommandPalette.tsx  GlassCard.tsx  RemotesTab.tsx  SettingsTab.tsx  TabNav.tsx  VaultTab.tsx
crates/desktop/src/lib/: api.ts  types.ts
crates/desktop/src/store/: appStore.ts
crates/desktop/tests/e2e/: desktop-flow.spec.ts  e2e-env.ts  global.setup.ts  global.teardown.ts
crates/relay/: Cargo.toml
crates/relay/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: API.md  ARCHITECTURE.md  PROGRESS.md  README.md  SPEC.md  TOOLING.md  alerts.md  coverage-report.md  dependency-upgrade-report.md  index.md  optimization-report.md
legacy/docs/: ROOT-README.md
policy/: secret-policy.toml
relay-public/: Dockerfile  clavisvault-relay.service  docker-compose.yml
scripts/: build-all.ps1  build-all.sh  check_desktop_network_policy.py  check_desktop_network_policy_test.py  enforce_advisory_policy.py  enforce_advisory_policy_test.py  hygiene.ps1  hygiene.sh  release.ps1  release.sh  run-extreme-tests.ps1  run-extreme-tests.sh  validate_audit_exceptions.py  validate_audit_exceptions_test.py
security/: advisory-baseline.toml
security/reports/: cargo-audit.json  cargo-deny.json  cargo-metadata-core-fuzz.json  cargo-metadata.json  npm-audit.json  npm-ls.json
server-public/: Dockerfile  clavisvault-server.service  docker-compose.yml
