[workspace]
members = ["crates/*", "crates/desktop/src-tauri"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOURUSERNAME/clavisvault"

[workspace.dependencies]
clavisvault-core = { path = "crates/core" }
# Core
chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
zeroize = "1.8"
rustls-platform-verifier = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
notify = { version = "8.0", features = ["macos_fsevent"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.43", features = ["full"] }
keyring = "2.3"

# Desktop / Tauri
tauri = "2"
tauri-build = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-biometric = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard = "2"

# Network / P2P
quinn = "0.11"
snow = "0.9"
stun = "0.7"

# Others
rand = "0.8"
base32 = "0.2"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rcgen = "0.13"
sha2 = "0.10"
zip = "4.6"
