[package]
name = "clavisvault-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clavisvault"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
clavisvault-core = { path = "../core" }
keyring = { version = "2.3", default-features = false, features = ["linux-default-keyutils", "platform-ios", "platform-macos", "platform-windows"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
