[package]
name = "clavisvault-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
dirs.workspace = true
notify.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
toml.workspace = true
tracing.workspace = true
zeroize.workspace = true
zip.workspace = true
