[package]
name = "clavisvault-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clavisvault-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clavisvault-core = { path = "../core" }
ed25519-dalek.workspace = true
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snow.workspace = true
zeroize.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
