[package]
name = "clavisvault-desktop-tauri"
version = "0.1.0"
description = "ClavisVault desktop shell"
authors = ["ClavisVault"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOURUSERNAME/clavisvault"
edition = "2024"
rust-version = "1.93.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clavisvault_desktop_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clavisvault-core.workspace = true
keyring.workspace = true
quinn.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snow.workspace = true
zeroize.workspace = true
rustls-platform-verifier.workspace = true
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-dialog.workspace = true
tauri-plugin-biometric.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-updater.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
